--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Milnor Fiber Debug</title>
+  <title>Milnor Shader</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
 </head>
 <body>
+  <input id="polyInput" type="text" value="x^2 + y^3" />
+<button id="updatePoly">Update Polynomial</button>
+
   <canvas id="canvas"></canvas>
   <script type="module" src="main.js"></script>
 </body>
